# fwlib

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Fwlib32.lib  README.md  build-deps.sh  docker-compose.yml  fwlib32.h  install.sh  libfwlib32-linux-armv7.so.1.0.5  libfwlib32-linux-x64.so.1.0.5  libfwlib32-linux-x86.so.1.0.0  libfwlib32-linux-x86.so.1.0.5
.github/workflows/: cmake.yml  windows-cmake.yml
example/: .gitignore  CMakeLists.txt  Dockerfile  README.md  extra-deps.sh
example/src/: CMakeLists.txt  config.c  config.h  main.c  util.c  util.h
example/test/: CMakeLists.txt  test_arg_config.c  test_arg_config.cpp  test_config.c  test_config.cfg  test_config.cpp  test_defaults_config.c  test_defaults_config.cpp  test_env_config.c  test_env_config.cpp  test_file_config.c  test_file_config.cpp  test_util.cpp
examples/c/: .gitignore  CMakeLists.txt  Dockerfile  README.md
examples/c-minimal/: Dockerfile  README.md  main.c
examples/c-minimal/docker/amd64/: Dockerfile
examples/c-minimal/docker/arm64/: Dockerfile
examples/c-minimal/docker/armv7/: Dockerfile
examples/c/docker/arm64/: Dockerfile
examples/c/docker/armv7/: Dockerfile
examples/c/src/: CMakeLists.txt  config.h  main.c  util.c  util.h
examples/c/test/: test_defaults_config.cpp  test_util.cpp
examples/ctypes/: fwlib32.py  main.py
examples/go/: Dockerfile  README.md  go.mod  main.go
examples/python-c-extension/: Dockerfile  README.md  fwlib.c  main.py  setup.py
scripts/: build-deps.sh  install.sh
